--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -78,6 +78,9 @@
   margin-left: auto;
   padding: 15px;
 }
+.region-sticky-footer{
+  @extend .clearfix;
+}
 //Sticky footer
 .sticky-footer {
   &.container-fluid {
@@ -86,6 +89,7 @@
   .menu.footer {
     @extend .nav-pills;
     border: 0;
+    float: left;
     margin: 0;
     padding: 0;
 
@@ -97,6 +101,16 @@
       &:focus {
         text-decoration: underline;
       }
+    }
+  }
+
+  .block-addtoany {
+    float: right;
+    position: relative;
+    .a2a_kit {
+      position: absolute;
+      right: 0;
+      top: -32px;
     }
   }
 }
