--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -108,7 +108,7 @@
     float: right;
     position: relative;
     .a2a_kit {
-      position: absolute;
+      position: relative;
       right: 0;
       top: -32px;
     }
