--- a/scss/fxj/_addtoany.scss
+++ b/scss/fxj/_addtoany.scss
@@ -45,7 +45,10 @@ a.a2a_i, i.a2a_i {
   }
 }
 #a2apage_dropdown {
+  @include shadow();
   background-color: rgba(255,255,255,.9) !important;
   border: 0 !important;
+  border-width: 0 1px 0 0;
   border-radius: 0 !important;
+  transform: translateY(-4em);
 }
