--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -25,3 +25,8 @@ $brand-quaternary:  #c0392b;    // Pomegranate
 //== Navbar
 $navbar-default-bg: white;
 $navbar-default-border: white;
+
+//== Buttons
+$btn-donate-color:              #fff !default;
+$btn-donate-bg:                 $brand-tertiary !default;
+$btn-donate-border:             $brand-tertiary !default;
