--- a/css/style.css
+++ b/css/style.css
@@ -8358,46 +8358,49 @@ p:last-child,
     /* line 100, ../scss/fxj/_footer.scss */
     .sticky-footer .menu.footer a:hover, .sticky-footer .menu.footer a:focus {
       text-decoration: underline; }
-/* line 107, ../scss/fxj/_footer.scss */
+    /* line 105, ../scss/fxj/_footer.scss */
+    .sticky-footer .menu.footer a svg {
+      margin-right: 5px; }
+/* line 111, ../scss/fxj/_footer.scss */
 .sticky-footer .block-addtoany {
   float: right;
   position: relative; }
-  /* line 110, ../scss/fxj/_footer.scss */
+  /* line 114, ../scss/fxj/_footer.scss */
   .sticky-footer .block-addtoany .a2a_kit {
     position: relative;
     right: 0;
     top: -32px; }
 
-/* line 120, ../scss/fxj/_footer.scss */
+/* line 124, ../scss/fxj/_footer.scss */
 .footer.container-fluid {
   background-color: #333333; }
-/* line 123, ../scss/fxj/_footer.scss */
+/* line 127, ../scss/fxj/_footer.scss */
 .footer a {
   color: white; }
-/* line 126, ../scss/fxj/_footer.scss */
+/* line 130, ../scss/fxj/_footer.scss */
 .footer h2 {
   font-size: 20px;
   font-weight: 400;
   margin-top: 0; }
-/* line 131, ../scss/fxj/_footer.scss */
+/* line 135, ../scss/fxj/_footer.scss */
 .footer strong {
   font-weight: 400; }
-/* line 134, ../scss/fxj/_footer.scss */
+/* line 138, ../scss/fxj/_footer.scss */
 .footer .block {
   margin: 0 0 15px 0; }
-  /* line 142, ../scss/fxj/_footer.scss */
+  /* line 146, ../scss/fxj/_footer.scss */
   .footer .block:first-of-type img {
     width: 100px; }
-  /* line 146, ../scss/fxj/_footer.scss */
+  /* line 150, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     border-top: 1px solid white;
     padding: 15px 0 0 0; }
 
 @media (min-width: 768px) {
-  /* line 157, ../scss/fxj/_footer.scss */
+  /* line 161, ../scss/fxj/_footer.scss */
   .footer .block:first-child img {
     width: auto; }
-  /* line 161, ../scss/fxj/_footer.scss */
+  /* line 165, ../scss/fxj/_footer.scss */
   .footer .block:last-of-type {
     clear: both;
     float: left;
