--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -101,6 +101,10 @@
       &:focus {
         text-decoration: underline;
       }
+
+      svg {
+        margin-right: 5px;
+      }
     }
   }
 
