feat(carousel): bootstrap oveerides

--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -77,3 +77,4 @@ p:last-child,
 @import "fxj/language-selector";
 @import "fxj/breadcrumb";
 @import "fxj/front-page";
+@import "fxj/bootstrap-carousel";
