--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -30,3 +30,6 @@ $navbar-default-border: white;
 $btn-donate-color:              #fff !default;
 $btn-donate-bg:                 $brand-tertiary !default;
 $btn-donate-border:             $brand-tertiary !default;
+
+//== Carousel
+$carousel-text-shadow: none;
